# soroban-opt-oracle

contracts/OnchainOracle/: Cargo.toml
contracts/OnchainOracle/src/: lib.rs  test.rs
contracts/OnchainOracle/test_snapshots/test/: test.1.json
contracts/VoteOracle/: Cargo.toml
contracts/VoteOracle/src/: lib.rs  test.rs
contracts/VoteOracle/test_snapshots/test/: test.1.json
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
